@@ -1,79 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" /><title>Release Summary - asterisk-12.3.0-rc2</title></head>
-<body>
-<h1 align="center"><a name="top">Release Summary</a></h1>
-<h3 align="center">asterisk-12.3.0-rc2</h3>
-<h3 align="center">Date: 2014-05-28</h3>
-<h3 align="center">&lt;asteriskteam@digium.com&gt;</h3>
-<hr/>
-<h2 align="center">Table of Contents</h2>
-<ol>
-   <li><a href="#summary">Summary</a></li>
-   <li><a href="#contributors">Contributors</a></li>
-   <li><a href="#commits">Other Changes</a></li>
-   <li><a href="#diffstat">Diffstat</a></li>
-</ol>
-<hr/>
-<a name="summary"><h2 align="center">Summary</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This release includes only bug fixes.  The changes included were made only to address problems that have been identified in this release series.  Users should be able to safely upgrade to this version if this release series is already in use.  Users considering upgrading from a previous release series are strongly encouraged to review the UPGRADE.txt document as well as the CHANGES document for information about upgrading to this release series.</p>
-<p>The data in this summary reflects changes that have been made since the previous release, asterisk-12.3.0-rc1.</p>
-<hr/>
-<a name="contributors"><h2 align="center">Contributors</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This table lists the people who have submitted code, those that have tested patches, as well as those that reported issues on the issue tracker that were resolved in this release.  For coders, the number is how many of their patches (of any size) were committed into this release.  For testers, the number is the number of times their name was listed as assisting with testing a patch.  Finally, for reporters, the number is the number of issues that they reported that were closed by commits that went into this release.</p>
-<table width="100%" border="0">
-<tr>
-<td width="33%"><h3>Coders</h3></td>
-<td width="33%"><h3>Testers</h3></td>
-<td width="33%"><h3>Reporters</h3></td>
-</tr>
-<tr valign="top">
-<td>
-3 bebuild<br/>
-</td>
-<td>
-</td>
-<td>
-</td>
-</tr>
-</table>
-<hr/>
-<a name="commits"><h2 align="center">Commits Not Associated with an Issue</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a list of all changes that went into this release that did not directly close an issue from the issue tracker.  The commits may have been marked as being related to an issue.  If that is the case, the issue numbers are listed here, as well.</p>
-<table width="100%" border="1">
-<tr><td><b>Revision</b></td><td><b>Author</b></td><td><b>Summary</b></td><td><b>Issues Referenced</b></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/12?view=revision&revision=414782">414782</a></td><td>bebuild</td><td>Create 12.3.0-rc2</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/12?view=revision&revision=414783">414783</a></td><td>bebuild</td><td>Remove old summaries; Update .version</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/12?view=revision&revision=414784">414784</a></td><td>bebuild</td><td>Merge r414528, r414749, r414763, r414765 for 12.3.0-rc2</td>
-<td></td></tr></table>
-<hr/>
-<a name="diffstat"><h2 align="center">Diffstat Results</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p>
-<pre>
-.version                             |    2
-ChangeLog                            |   50 ++
-UPGRADE.txt                          |    8
-asterisk-12.3.0-rc1-summary.html     |  512 -----------------------
-asterisk-12.3.0-rc1-summary.txt      |  763 -----------------------------------
-contrib/ast-db-manage/cdr/env.py     |    5
-include/asterisk/manager.h           |    2
-include/asterisk/res_pjsip_session.h |   22 -
-res/res_pjsip_session.c              |   87 ++-
-res/res_pjsip_t38.c                  |   15
-rest-api/api-docs/applications.json  |    2
-rest-api/api-docs/asterisk.json      |    2
-rest-api/api-docs/bridges.json       |    2
-rest-api/api-docs/channels.json      |    2
-rest-api/api-docs/deviceStates.json  |    2
-rest-api/api-docs/endpoints.json     |    2
-rest-api/api-docs/events.json        |    2
-rest-api/api-docs/mailboxes.json     |    2
-rest-api/api-docs/playbacks.json     |    2
-rest-api/api-docs/recordings.json    |    2
-rest-api/api-docs/sounds.json        |    2
-rest-api/resources.json              |    2
-tests/test_cel.c                     |    4
-23 files changed, 160 insertions(+), 1334 deletions(-)
-</pre><br/>
-<hr/>
-</body>
-</html>
